# MusStream

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Roadmap.md  design.free  updater.cpp  updater.h  version.json
MusStream/: CMakeLists.txt  Main.qml  Resources.qrc  backend.cpp  backend.h  database.cpp  database.h  qt_build.bat  sourcemanager.h
MusStream/Assets/: data.db
MusStream/interface/: Home.qml  Sources.qml
MusStream/interface/compoments/: MusicRow.qml
MusStream/resources/: app_icon.rc
MusStream/wixtoolset/: Fragment.wxs  MusStreamInstaller.wixproj  README.md  build.bat
docs/html/: _home_8qml.html  _main_8qml.html  _search_8qml.html  _sources_8qml.html  annotated.html  annotated_dup.js  backend_8cpp.html  backend_8cpp__incl.map  backend_8cpp__incl.md5  backend_8h.html  backend_8h.js  backend_8h__dep__incl.map  backend_8h__dep__incl.md5  backend_8h__incl.map  backend_8h__incl.md5  backend_8h_source.html  class_source_manager-members.html  class_source_manager.html  class_source_manager.js  class_source_manager__coll__graph.md5  class_source_manager__inherit__graph.map  classback_end-members.html  classback_end.html  classback_end.js  classback_end__coll__graph.map  classback_end__coll__graph.md5  classback_end__inherit__graph.map  classback_end__inherit__graph.md5  classdatabase-members.html  classdatabase.html  classdatabase.js  classdatabase__coll__graph.map  classdatabase__coll__graph.md5  classes.html  database_8cpp.html  database_8cpp__incl.map  database_8cpp__incl.md5  database_8h.html  database_8h.js  database_8h__dep__incl.map  (+43 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_2.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: _home_8qml.tex  _main_8qml.tex  _search_8qml.tex  _sources_8qml.tex  annotated.tex  backend_8cpp.tex  backend_8cpp__incl.md5  backend_8h.tex  backend_8h__dep__incl.md5  backend_8h__incl.md5  backend_8h_source.tex  class_source_manager.tex  class_source_manager__inherit__graph.md5  classback_end.tex  classback_end__coll__graph.md5  classback_end__inherit__graph.md5  classdatabase.tex  classdatabase__inherit__graph.md5  database_8cpp.tex  database_8cpp__incl.md5  database_8h.tex  database_8h__dep__incl.md5  database_8h__incl.md5  database_8h_source.tex  dir_1439c7c6cef78492bd5e14736ac165b9.tex  dir_1439c7c6cef78492bd5e14736ac165b9_dep.md5  dir_15d6d1e1c5c6be527049478afc18c819.tex  dirs.tex  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  sourcemanager_8cpp.tex  sourcemanager_8cpp__incl.md5  sourcemanager_8h.tex  sourcemanager_8h__dep__incl.md5  sourcemanager_8h__incl.md5  sourcemanager_8h_source.tex
src/: Fragment.wxs  Main.qml  Main.txt  Resources.qrc  backend.cpp  backend.h  database.h  main.cpp  sourcemanager.cpp  updatechecker.cpp  updatechecker.h
src/interface/: Home.txt  Search.qml  Settings.qml  Sources.qml
src/resources/: app_icon.rc
src/wixtoolset/: GenerateFragment.ps1  Product.msi  Product.wixpdb  Product.wxs
